--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GHubSearch</string>
+    <string name="bulleted_text">• %s</string>
     <string name="cd_error_modal">Error</string>
     <string name="cd_loading">Loading</string>
     <string name="general_string">%s</string>
@@ -18,5 +19,6 @@
         <item quantity="other">Found %d results.</item>
     </plurals>
     <string name="search_results_many">Found %d results. These are their 3 most popular: </string>
+    <string name="tag_list">Tags:\t\t%s</string>
 
 </resources>
